src/css/hashpress-reviews.css
body.hashpress-reviews-modal-open {
    overflow: hidden;
}

.hashpress-reviews-section {
    display: flex;
    width: 100%;
    flex-direction: column;
    justify-items: flex-start;
    align-items: flex-start;
    gap: 2rem;
}

.hashpress-reviews-list {
    display: flex;
    flex-wrap: wrap;
    --gap: 1.25rem;
    gap: var(--gap);
    width: 100%;
}

.hashpress-reviews-review {
    position: relative;
    padding: 1rem;
    border: 1px solid #111;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    transition: all 0.3s cubic-bezier(0.2, 0, 0.2, 1);
    flex: 1 1 auto;
    min-width: 27rem;
}

.hashpress-reviews-modal .hashpress-reviews-review {
    @media (min-width: 48em) {
        flex: 1 1 calc(50% - var(--gap) / 2);
        max-width: calc(50% - var(--gap) / 2);
    }
}

.hashpress-reviews-review.is-loading {
    border-color: rgba(0, 0, 0, 0.1);
    background-color: rgba(0, 0, 0, 0.02);
}

.hashpress-reviews-review.is-loading .hashpress-reviews-review__header,
.hashpress-reviews-review.is-loading .hashpress-reviews-review__subheader,
.hashpress-reviews-review.is-loading .hashpress-reviews-review__body {
    filter: blur(4px);
    opacity: 0.5;
}

.hashpress-reviews-review__badge {
    position: absolute;
    top: -4px;
    right: -4px;
    background-color: #000;
    color: #fff;
    padding: 0px 6px;
    font-size: 0.5625rem;
    letter-spacing: 0;
    font-weight: 700;
    text-transform: uppercase;
    display: none;
}

.hashpress-reviews-review__header {
    display: flex;
    gap: 1rem;
    align-items: center;
}

.hashpress-reviews-review__icon {
    width: 3rem;
    height: 3rem;
    border-radius: 50%;
    background-color: #111;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    font-size: 1.5625rem;
    font-weight: bold;
    flex-shrink: 0;
}
.hashpress-reviews-review__subheader {
    display: flex;
    /* flex-wrap: wrap; */
    gap: 0.75rem;
    align-items: center;
}
.hashpress-reviews-review__stars {
    display: flex;
}

.hashpress-reviews-review__star {
    background-image: url("data:image/svg+xml,%3Csvg width='18' height='16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M8.997 0c.287 0 .55.163.675.422l2.144 4.416 4.787.706a.753.753 0 0 1 .419 1.275l-3.472 3.443.819 4.863a.751.751 0 0 1-1.094.787l-4.281-2.287-4.275 2.284a.746.746 0 0 1-.79-.053.757.757 0 0 1-.304-.734l.819-4.863L.972 6.82a.748.748 0 0 1-.185-.766.755.755 0 0 1 .604-.51l4.787-.705L8.322.421A.75.75 0 0 1 8.997 0Zm0 2.469L7.357 5.85a.757.757 0 0 1-.566.416l-3.697.543 2.684 2.66a.752.752 0 0 1 .213.656l-.635 3.74 3.288-1.756a.744.744 0 0 1 .706 0l3.287 1.757-.63-3.738a.743.743 0 0 1 .212-.656l2.684-2.66-3.697-.546a.755.755 0 0 1-.565-.416L8.997 2.469Z' fill='%23000' /%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h18v16H0z' /%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
    width: 18px;
    height: 15px;
}

.hashpress-reviews-review__star.is-solid {
    background-image: url("data:image/svg+xml,%3Csvg width='18' height='15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M9.903.527a1.006 1.006 0 0 0-.9-.527 1.01 1.01 0 0 0-.9.527l-2.01 3.876-4.487.621a.983.983 0 0 0-.803.636.902.902 0 0 0 .247.958l3.256 3.02-.769 4.27a.914.914 0 0 0 .404.916c.309.208.718.235 1.056.068l4.01-2.007 4.008 2.007c.338.167.747.143 1.057-.068a.917.917 0 0 0 .403-.917l-.772-4.268 3.256-3.02a.896.896 0 0 0 .247-.959.987.987 0 0 0-.803-.636l-4.49-.62L9.902.526Z' fill='%23000' /%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h18v15H0z' /%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
    width: 18px;
    height: 15px;
}

.hashpress-reviews-review__date1,
.hashpress-reviews-review__date2 {
    display: flex;
    gap: 0.3rem;
    align-items: center;
}

.hashpress-reviews-review__date1 time:hover,
.hashpress-reviews-review__date2 time:hover {
    word-break: break-all;
}

.hashpress-reviews-review__date1 svg,
.hashpress-reviews-review__date2 svg {
    flex-shrink: 0;
    opacity: 0.5;
    width: 15px;
    height: 13px;
}

.hashpress-reviews-modal {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    display: flex;
    align-items: center;
    /* align-items: flex-start; */
    justify-content: center;
    z-index: 30;
    opacity: 0;
    visibility: hidden;
    padding: 1rem 0;
    transition: opacity 0.3s cubic-bezier(0.2, 0, 0.2, 1);

    @media (min-width: 48em) {
        padding: 3rem 0;
    }
}
.hashpress-reviews-modal.is-active {
    opacity: 1;
    visibility: visible;
}

.hashpress-reviews-modal.is-active .hashpress-reviews-modal__inner {
    transform: translateY(0);
    opacity: 1;
}

.hashpress-reviews-modal__bg {
    background-color: rgba(0, 0, 0, 0.2);
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: -1;
    cursor: pointer;
}

.hashpress-reviews-modal__inner {
    display: flex;
    flex-direction: column;
    /* gap: 1rem; */
    background-color: #fff;
    width: min(calc(100vw - 2rem), 75rem);
    overflow: scroll;
    position: relative;
    max-height: 100%;
    transition: all 0.3s 0.2s cubic-bezier(0.2, 0, 0.2, 1);
    transform: translateY(2rem);
    opacity: 0;
}

.hashpress-reviews-modal__header {
    position: sticky;
    background-color: #fff;
    z-index: 2;
    top: 0;
    left: 0;
    right: 0;
    padding: 1rem;
    /* box-shadow: 0 0px 20px 0 rgba(255, 255, 255, 0.05); */
    box-shadow: 0px 6px 12px 5px rgba(255, 255, 255, 0.75);

    @media (min-width: 48em) {
        padding: 1rem 2rem;
    }
}

.hashpress-reviews-modal__body {
    padding: 1rem;

    @media (min-width: 48em) {
        padding: 1rem 2rem;
    }
}

.hashpress-reviews-modal__close {
    position: absolute;
    top: 0;
    right: 0;
    /* padding: 1rem; */
    width: 5rem;
    height: 5rem;
    /* border: 1px solid gold; */
    display: flex;
    align-items: center;
    justify-content: center;
}

.hashpress-reviews-modal__form {
    display: flex;
    flex-direction: column;
    gap: 0.625rem;
    /* justify-content: flex-start; */
    align-items: flex-start;
}

.hashpress-reviews-modal input[type="text"] {
    width: 100%;
    outline: none;
}

.hashpress-reviews-modal textarea {
    width: 100%;
    min-height: 12.5rem;
    outline: none;
}

.hashpress-reviews-actions {
    display: flex;
    gap: 1rem;
    align-items: center;
}

.hashpress-reviews-write-review {
    background-color: #111;
    opacity: 0;
    visibility: hidden;
}

.hashpress-reviews-write-review.is-active {
    opacity: 1;
    visibility: visible;
}

.hashpress-reviews-rating {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.hashpress-reviews-stars {
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-end;
    transform: scale(1.3);
    transform-origin: left center;
}

.hashpress-reviews-stars__star {
    cursor: pointer;
    width: 18px;
    height: 2rem;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    background-image: url("data:image/svg+xml,%3Csvg width='18' height='16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M8.997 0c.287 0 .55.163.675.422l2.144 4.416 4.787.706a.753.753 0 0 1 .419 1.275l-3.472 3.443.819 4.863a.751.751 0 0 1-1.094.787l-4.281-2.287-4.275 2.284a.746.746 0 0 1-.79-.053.757.757 0 0 1-.304-.734l.819-4.863L.972 6.82a.748.748 0 0 1-.185-.766.755.755 0 0 1 .604-.51l4.787-.705L8.322.421A.75.75 0 0 1 8.997 0Zm0 2.469L7.357 5.85a.757.757 0 0 1-.566.416l-3.697.543 2.684 2.66a.752.752 0 0 1 .213.656l-.635 3.74 3.288-1.756a.744.744 0 0 1 .706 0l3.287 1.757-.63-3.738a.743.743 0 0 1 .212-.656l2.684-2.66-3.697-.546a.755.755 0 0 1-.565-.416L8.997 2.469Z' fill='%23000' /%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h18v16H0z' /%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
    transition: background-image 0.3s cubic-bezier(0.2, 0, 0.2, 1);
}

.hashpress-reviews-stars__star.is-active,
.hashpress-reviews-stars__star.is-active + .hashpress-reviews-stars__star,
.hashpress-reviews-stars__star.is-active + .hashpress-reviews-stars__star + .hashpress-reviews-stars__star,
.hashpress-reviews-stars__star.is-active
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star,
.hashpress-reviews-stars__star.is-active
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star,
.hashpress-reviews-stars__star:hover,
.hashpress-reviews-stars__star:hover + .hashpress-reviews-stars__star,
.hashpress-reviews-stars__star:hover + .hashpress-reviews-stars__star + .hashpress-reviews-stars__star,
.hashpress-reviews-stars__star:hover
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star,
.hashpress-reviews-stars__star:hover
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star
    + .hashpress-reviews-stars__star {
    background-image: url("data:image/svg+xml,%3Csvg width='18' height='15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cpath d='M9.903.527a1.006 1.006 0 0 0-.9-.527 1.01 1.01 0 0 0-.9.527l-2.01 3.876-4.487.621a.983.983 0 0 0-.803.636.902.902 0 0 0 .247.958l3.256 3.02-.769 4.27a.914.914 0 0 0 .404.916c.309.208.718.235 1.056.068l4.01-2.007 4.008 2.007c.338.167.747.143 1.057-.068a.917.917 0 0 0 .403-.917l-.772-4.268 3.256-3.02a.896.896 0 0 0 .247-.959.987.987 0 0 0-.803-.636l-4.49-.62L9.902.526Z' fill='%23000' /%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' d='M0 0h18v15H0z' /%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
}

.hashpress-reviews-rating__display {
    margin-left: 2rem;
    font-weight: bold;
}

/* .hashpress-reviews-write-review-wrapper {
    opacity: 0;
    visibility: hidden;
} */

.hashpress-reviews-write-review-wrapper.is-active {
    opacity: 1;
    visibility: visible;
}

